fix: overflow text wraps

--- a/src/components/Note.css
+++ b/src/components/Note.css
@@ -65,7 +65,10 @@
   margin: 0;
   padding: 5px;
   width: 100%;
+  height: 100%;
   box-sizing: border-box;
+  word-break: break-word;
+  white-space: pre-wrap;
 }
 
 input.todo-text {
